--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 26 04:05:10 2018</p>
+         Last Run: Thu Jul 26 05:05:22 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. CNS Fiore - Foothills 4</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 28, 2018 - 12:30PM til  3:00PM</H4>
                <table class="table table-striped">
@@ -33,23 +33,23 @@
                         <td>Clear</td>
                         <td>21</td>
                         <td>21</td>
-                        <td>4</td>
-                        <td>44</td>
+                        <td>7</td>
+                        <td>45</td>
                         <td>4</td>
                         <td>8</td>
-                        <td>N</td>
-                        <td>13</td>
+                        <td>NNW</td>
+                        <td>14</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
                         <td>Clear</td>
-                        <td>22</td>
-                        <td>22</td>
-                        <td>4</td>
+                        <td>23</td>
+                        <td>23</td>
+                        <td>8</td>
                         <td>39</td>
                         <td>5</td>
                         <td>8</td>
-                        <td>ENE</td>
+                        <td>E</td>
                         <td>19</td>
                      </tr>
                      <tr>
@@ -58,7 +58,7 @@
                         <td>23</td>
                         <td>23</td>
                         <td>15</td>
-                        <td>35</td>
+                        <td>36</td>
                         <td>6</td>
                         <td>8</td>
                         <td>E</td>
@@ -70,11 +70,11 @@
                         <td>24</td>
                         <td>24</td>
                         <td>15</td>
-                        <td>33</td>
+                        <td>34</td>
                         <td>7</td>
                         <td>10</td>
                         <td>E</td>
-                        <td>32</td>
+                        <td>33</td>
                      </tr>
                      <tr>
                         <td>03:00 PM</td>
@@ -82,11 +82,11 @@
                         <td>24</td>
                         <td>24</td>
                         <td>15</td>
-                        <td>32</td>
+                        <td>33</td>
                         <td>6</td>
                         <td>10</td>
                         <td>NE</td>
-                        <td>31</td>
+                        <td>32</td>
                      </tr>
                   </tbody>
                </table>
@@ -133,7 +133,7 @@
                "fillColor":"rgba(92,0,141,0)",
                "data":[
                  "21",
-                 "22",
+                 "23",
                  "23",
                  "24",
                  "24"
@@ -146,7 +146,7 @@
                "fillColor":"rgba(252,49,18,0)",
                "data":[
                  "21",
-                 "22",
+                 "23",
                  "23",
                  "24",
                  "24"
@@ -202,8 +202,8 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "4",
-                 "4",
+                 "7",
+                 "8",
                  "15",
                  "15",
                  "15"
@@ -214,11 +214,11 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "44",
+                 "45",
                  "39",
-                 "35",
-                 "33",
-                 "32"
+                 "36",
+                 "34",
+                 "33"
                ]
              },
              {
@@ -226,11 +226,11 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "13",
+                 "14",
                  "19",
                  "34",
-                 "32",
-                 "31"
+                 "33",
+                 "32"
                ]
              }
            ]
@@ -247,7 +247,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 26 04:05:10 2018</p>
+         Last Run: Thu Jul 26 05:05:22 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. MSB Fusion - CSC Field 3</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 31, 2018 -  6:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -281,8 +281,8 @@
                      <tr>
                         <td>07:00 PM</td>
                         <td>Chance of a Thunderstorm</td>
-                        <td>23</td>
-                        <td>23</td>
+                        <td>24</td>
+                        <td>24</td>
                         <td>43</td>
                         <td>46</td>
                         <td>1</td>
@@ -308,7 +308,7 @@
                         <td>20</td>
                         <td>20</td>
                         <td>49</td>
-                        <td>59</td>
+                        <td>60</td>
                         <td>0</td>
                         <td>16</td>
                         <td>N</td>
@@ -358,7 +358,7 @@
                "fillColor":"rgba(92,0,141,0)",
                "data":[
                  "24",
-                 "23",
+                 "24",
                  "22",
                  "20"
                ]
@@ -370,7 +370,7 @@
                "fillColor":"rgba(252,49,18,0)",
                "data":[
                  "24",
-                 "23",
+                 "24",
                  "22",
                  "20"
                ]
@@ -438,7 +438,7 @@
                  "45",
                  "46",
                  "51",
-                 "59"
+                 "60"
                ]
              },
              {
