--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 26 05:05:22 2018</p>
+         Last Run: Thu Jul 26 06:05:13 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. CNS Fiore - Foothills 4</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 28, 2018 - 12:30PM til  3:00PM</H4>
                <table class="table table-striped">
@@ -33,60 +33,60 @@
                         <td>Clear</td>
                         <td>21</td>
                         <td>21</td>
-                        <td>7</td>
-                        <td>45</td>
+                        <td>6</td>
+                        <td>44</td>
                         <td>4</td>
                         <td>8</td>
                         <td>NNW</td>
-                        <td>14</td>
+                        <td>13</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
                         <td>Clear</td>
-                        <td>23</td>
-                        <td>23</td>
-                        <td>8</td>
+                        <td>22</td>
+                        <td>22</td>
+                        <td>7</td>
                         <td>39</td>
                         <td>5</td>
                         <td>8</td>
-                        <td>E</td>
-                        <td>19</td>
+                        <td>ENE</td>
+                        <td>18</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Clear</td>
                         <td>23</td>
                         <td>23</td>
-                        <td>15</td>
+                        <td>4</td>
                         <td>36</td>
                         <td>6</td>
                         <td>8</td>
-                        <td>E</td>
-                        <td>34</td>
+                        <td>ENE</td>
+                        <td>17</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Clear</td>
                         <td>24</td>
                         <td>24</td>
-                        <td>15</td>
+                        <td>4</td>
                         <td>34</td>
                         <td>7</td>
                         <td>10</td>
                         <td>E</td>
-                        <td>33</td>
+                        <td>15</td>
                      </tr>
                      <tr>
                         <td>03:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Clear</td>
                         <td>24</td>
                         <td>24</td>
-                        <td>15</td>
+                        <td>4</td>
                         <td>33</td>
                         <td>6</td>
-                        <td>10</td>
+                        <td>11</td>
                         <td>NE</td>
-                        <td>32</td>
+                        <td>12</td>
                      </tr>
                   </tbody>
                </table>
@@ -133,7 +133,7 @@
                "fillColor":"rgba(92,0,141,0)",
                "data":[
                  "21",
-                 "23",
+                 "22",
                  "23",
                  "24",
                  "24"
@@ -146,7 +146,7 @@
                "fillColor":"rgba(252,49,18,0)",
                "data":[
                  "21",
-                 "23",
+                 "22",
                  "23",
                  "24",
                  "24"
@@ -202,11 +202,11 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
+                 "6",
                  "7",
-                 "8",
-                 "15",
-                 "15",
-                 "15"
+                 "4",
+                 "4",
+                 "4"
                ]
              },
              {
@@ -214,7 +214,7 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "45",
+                 "44",
                  "39",
                  "36",
                  "34",
@@ -226,11 +226,11 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "14",
-                 "19",
-                 "34",
-                 "33",
-                 "32"
+                 "13",
+                 "18",
+                 "17",
+                 "15",
+                 "12"
                ]
              }
            ]
@@ -247,7 +247,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 26 05:05:22 2018</p>
+         Last Run: Thu Jul 26 06:05:13 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. MSB Fusion - CSC Field 3</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 31, 2018 -  6:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -271,8 +271,8 @@
                         <td>Chance of a Thunderstorm</td>
                         <td>24</td>
                         <td>24</td>
-                        <td>42</td>
                         <td>45</td>
+                        <td>47</td>
                         <td>2</td>
                         <td>16</td>
                         <td>NE</td>
@@ -281,37 +281,37 @@
                      <tr>
                         <td>07:00 PM</td>
                         <td>Chance of a Thunderstorm</td>
-                        <td>24</td>
-                        <td>24</td>
-                        <td>43</td>
+                        <td>23</td>
+                        <td>23</td>
                         <td>46</td>
+                        <td>49</td>
                         <td>1</td>
                         <td>16</td>
                         <td>NNE</td>
-                        <td>50</td>
+                        <td>51</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
                         <td>Chance of a Thunderstorm</td>
                         <td>22</td>
                         <td>22</td>
-                        <td>44</td>
-                        <td>51</td>
+                        <td>47</td>
+                        <td>53</td>
                         <td>0</td>
                         <td>16</td>
                         <td>NNE</td>
-                        <td>57</td>
+                        <td>58</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
                         <td>Chance of a Thunderstorm</td>
                         <td>20</td>
                         <td>20</td>
-                        <td>49</td>
-                        <td>60</td>
+                        <td>50</td>
+                        <td>61</td>
                         <td>0</td>
                         <td>16</td>
-                        <td>N</td>
+                        <td>NNE</td>
                         <td>64</td>
                      </tr>
                   </tbody>
@@ -358,7 +358,7 @@
                "fillColor":"rgba(92,0,141,0)",
                "data":[
                  "24",
-                 "24",
+                 "23",
                  "22",
                  "20"
                ]
@@ -370,7 +370,7 @@
                "fillColor":"rgba(252,49,18,0)",
                "data":[
                  "24",
-                 "24",
+                 "23",
                  "22",
                  "20"
                ]
@@ -424,10 +424,10 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "42",
-                 "43",
-                 "44",
-                 "49"
+                 "45",
+                 "46",
+                 "47",
+                 "50"
                ]
              },
              {
@@ -435,10 +435,10 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "45",
-                 "46",
-                 "51",
-                 "60"
+                 "47",
+                 "49",
+                 "53",
+                 "61"
                ]
              },
              {
@@ -447,8 +447,8 @@
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
                  "50",
-                 "50",
-                 "57",
+                 "51",
+                 "58",
                  "64"
                ]
              }
