--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 26 06:05:13 2018</p>
+         Last Run: Thu Jul 26 07:05:15 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. CNS Fiore - Foothills 4</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 28, 2018 - 12:30PM til  3:00PM</H4>
                <table class="table table-striped">
@@ -73,7 +73,7 @@
                         <td>34</td>
                         <td>7</td>
                         <td>10</td>
-                        <td>E</td>
+                        <td>ENE</td>
                         <td>15</td>
                      </tr>
                      <tr>
@@ -247,7 +247,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 26 06:05:13 2018</p>
+         Last Run: Thu Jul 26 07:05:15 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. MSB Fusion - CSC Field 3</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 31, 2018 -  6:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -271,8 +271,8 @@
                         <td>Chance of a Thunderstorm</td>
                         <td>24</td>
                         <td>24</td>
-                        <td>45</td>
-                        <td>47</td>
+                        <td>38</td>
+                        <td>46</td>
                         <td>2</td>
                         <td>16</td>
                         <td>NE</td>
@@ -283,36 +283,36 @@
                         <td>Chance of a Thunderstorm</td>
                         <td>23</td>
                         <td>23</td>
-                        <td>46</td>
-                        <td>49</td>
+                        <td>39</td>
+                        <td>48</td>
                         <td>1</td>
                         <td>16</td>
                         <td>NNE</td>
-                        <td>51</td>
+                        <td>50</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
                         <td>Chance of a Thunderstorm</td>
                         <td>22</td>
                         <td>22</td>
-                        <td>47</td>
+                        <td>40</td>
                         <td>53</td>
                         <td>0</td>
                         <td>16</td>
                         <td>NNE</td>
-                        <td>58</td>
+                        <td>56</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
                         <td>Chance of a Thunderstorm</td>
                         <td>20</td>
                         <td>20</td>
-                        <td>50</td>
+                        <td>47</td>
                         <td>61</td>
                         <td>0</td>
                         <td>16</td>
                         <td>NNE</td>
-                        <td>64</td>
+                        <td>62</td>
                      </tr>
                   </tbody>
                </table>
@@ -424,10 +424,10 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "45",
-                 "46",
-                 "47",
-                 "50"
+                 "38",
+                 "39",
+                 "40",
+                 "47"
                ]
              },
              {
@@ -435,8 +435,8 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "47",
-                 "49",
+                 "46",
+                 "48",
                  "53",
                  "61"
                ]
@@ -447,9 +447,9 @@
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
                  "50",
-                 "51",
-                 "58",
-                 "64"
+                 "50",
+                 "56",
+                 "62"
                ]
              }
            ]
