--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 26 08:05:11 2018</p>
+         Last Run: Thu Jul 26 09:05:12 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. CNS Fiore - Foothills 4</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 28, 2018 - 12:30PM til  3:00PM</H4>
                <table class="table table-striped">
@@ -31,38 +31,38 @@
                      <tr>
                         <td>11:00 AM</td>
                         <td>Clear</td>
-                        <td>22</td>
-                        <td>22</td>
+                        <td>21</td>
+                        <td>21</td>
                         <td>7</td>
-                        <td>44</td>
+                        <td>45</td>
                         <td>4</td>
                         <td>8</td>
-                        <td>N</td>
+                        <td>NNW</td>
                         <td>14</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
                         <td>Clear</td>
-                        <td>23</td>
-                        <td>23</td>
-                        <td>6</td>
-                        <td>38</td>
+                        <td>22</td>
+                        <td>22</td>
+                        <td>5</td>
+                        <td>40</td>
                         <td>5</td>
                         <td>8</td>
-                        <td>NE</td>
-                        <td>18</td>
+                        <td>ENE</td>
+                        <td>17</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
                         <td>Clear</td>
-                        <td>24</td>
-                        <td>24</td>
-                        <td>4</td>
-                        <td>35</td>
+                        <td>23</td>
+                        <td>23</td>
+                        <td>3</td>
+                        <td>36</td>
                         <td>6</td>
                         <td>8</td>
                         <td>ENE</td>
-                        <td>16</td>
+                        <td>15</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -70,11 +70,11 @@
                         <td>24</td>
                         <td>24</td>
                         <td>5</td>
-                        <td>33</td>
+                        <td>34</td>
                         <td>7</td>
                         <td>10</td>
                         <td>ENE</td>
-                        <td>13</td>
+                        <td>14</td>
                      </tr>
                      <tr>
                         <td>03:00 PM</td>
@@ -82,9 +82,9 @@
                         <td>24</td>
                         <td>24</td>
                         <td>4</td>
-                        <td>32</td>
+                        <td>33</td>
                         <td>6</td>
-                        <td>10</td>
+                        <td>11</td>
                         <td>NE</td>
                         <td>12</td>
                      </tr>
@@ -132,9 +132,9 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
+                 "21",
                  "22",
                  "23",
-                 "24",
                  "24",
                  "24"
                ]
@@ -145,9 +145,9 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
+                 "21",
                  "22",
                  "23",
-                 "24",
                  "24",
                  "24"
                ]
@@ -203,8 +203,8 @@
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
                  "7",
-                 "6",
-                 "4",
+                 "5",
+                 "3",
                  "5",
                  "4"
                ]
@@ -214,11 +214,11 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "44",
-                 "38",
-                 "35",
-                 "33",
-                 "32"
+                 "45",
+                 "40",
+                 "36",
+                 "34",
+                 "33"
                ]
              },
              {
@@ -227,9 +227,9 @@
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
                  "14",
-                 "18",
-                 "16",
-                 "13",
+                 "17",
+                 "15",
+                 "14",
                  "12"
                ]
              }
@@ -247,7 +247,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 26 08:05:11 2018</p>
+         Last Run: Thu Jul 26 09:05:12 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. MSB Fusion - CSC Field 3</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 31, 2018 -  6:30PM til  9:00PM</H4>
                <table class="table table-striped">
