--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 26 09:05:12 2018</p>
+         Last Run: Thu Jul 26 10:05:23 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. CNS Fiore - Foothills 4</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 28, 2018 - 12:30PM til  3:00PM</H4>
                <table class="table table-striped">
@@ -31,62 +31,62 @@
                      <tr>
                         <td>11:00 AM</td>
                         <td>Clear</td>
-                        <td>21</td>
-                        <td>21</td>
+                        <td>22</td>
+                        <td>22</td>
                         <td>7</td>
-                        <td>45</td>
+                        <td>44</td>
                         <td>4</td>
                         <td>8</td>
-                        <td>NNW</td>
-                        <td>14</td>
+                        <td>N</td>
+                        <td>15</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
                         <td>Clear</td>
-                        <td>22</td>
-                        <td>22</td>
-                        <td>5</td>
-                        <td>40</td>
+                        <td>23</td>
+                        <td>23</td>
+                        <td>6</td>
+                        <td>39</td>
                         <td>5</td>
                         <td>8</td>
-                        <td>ENE</td>
-                        <td>17</td>
+                        <td>NE</td>
+                        <td>18</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
-                        <td>Clear</td>
-                        <td>23</td>
-                        <td>23</td>
-                        <td>3</td>
-                        <td>36</td>
+                        <td>Partly Cloudy</td>
+                        <td>24</td>
+                        <td>24</td>
+                        <td>15</td>
+                        <td>35</td>
                         <td>6</td>
                         <td>8</td>
                         <td>ENE</td>
-                        <td>15</td>
+                        <td>32</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
-                        <td>Clear</td>
+                        <td>Partly Cloudy</td>
                         <td>24</td>
                         <td>24</td>
-                        <td>5</td>
-                        <td>34</td>
+                        <td>15</td>
+                        <td>33</td>
                         <td>7</td>
                         <td>10</td>
                         <td>ENE</td>
-                        <td>14</td>
+                        <td>31</td>
                      </tr>
                      <tr>
                         <td>03:00 PM</td>
-                        <td>Clear</td>
+                        <td>Partly Cloudy</td>
                         <td>24</td>
                         <td>24</td>
-                        <td>4</td>
-                        <td>33</td>
+                        <td>15</td>
+                        <td>32</td>
                         <td>6</td>
-                        <td>11</td>
+                        <td>10</td>
                         <td>NE</td>
-                        <td>12</td>
+                        <td>30</td>
                      </tr>
                   </tbody>
                </table>
@@ -132,9 +132,9 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "21",
                  "22",
                  "23",
+                 "24",
                  "24",
                  "24"
                ]
@@ -145,9 +145,9 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "21",
                  "22",
                  "23",
+                 "24",
                  "24",
                  "24"
                ]
@@ -203,10 +203,10 @@
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
                  "7",
-                 "5",
-                 "3",
-                 "5",
-                 "4"
+                 "6",
+                 "15",
+                 "15",
+                 "15"
                ]
              },
              {
@@ -214,11 +214,11 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "45",
-                 "40",
-                 "36",
-                 "34",
-                 "33"
+                 "44",
+                 "39",
+                 "35",
+                 "33",
+                 "32"
                ]
              },
              {
@@ -226,11 +226,11 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "14",
-                 "17",
                  "15",
-                 "14",
-                 "12"
+                 "18",
+                 "32",
+                 "31",
+                 "30"
                ]
              }
            ]
@@ -247,7 +247,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 26 09:05:12 2018</p>
+         Last Run: Thu Jul 26 10:05:23 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. MSB Fusion - CSC Field 3</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 31, 2018 -  6:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -310,7 +310,7 @@
                         <td>47</td>
                         <td>61</td>
                         <td>0</td>
-                        <td>16</td>
+                        <td>14</td>
                         <td>NNE</td>
                         <td>62</td>
                      </tr>
